--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import Home from '../components/Home.astro';
 import Layout from '../layouts/Layout.astro';
 import Anggota from '../components/Anggota.astro';
+import Tentang from '../components/Tentang.astro';
 
 ---
 <Layout 
@@ -9,5 +10,6 @@ import Anggota from '../components/Anggota.astro';
 	description="Selamat datang di website resmi kelas 01SIFP010 Sistem Informasi Universitas Pamulang. Temukan informasi tentang kelas dan anggota kami."
 >
 	<Home />
+	<Tentang />
 	<Anggota />
 </Layout>
