--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -31,7 +31,7 @@ const members = [
 ];
 ---
 
-<section id="anggota" class="bg-white p-5 md:p-20 h-full">
+<section id="anggota" class="bg-white p-5 md:p-20 h-full mt-28 mb-28">
     <div class="mx-auto max-w-7xl px-4 lg:px-12">
         <h2 class="text-2xl font-bold mb-4 text-center">Anggota Kelas 01SIFP010</h2>
         <div class="bg-white relative shadow-md sm:rounded-lg overflow-hidden mt-10">
