--- a/src/components/Home.astro
+++ b/src/components/Home.astro
@@ -10,7 +10,7 @@ const lottieProps = {
   src="https://unpkg.com/@lottiefiles/dotlottie-wc@0.8.5/dist/dotlottie-wc.js"
   type="module"
 ></script>
-<main id="tentang" class="w-full h-full flex flex-col items-center justify-center">
+<main id="beranda" class="w-full h-full flex flex-col items-center justify-center">
     <section class="p-5 md:p-20 w-full overflow-hidden h-full flex flex-col-reverse md:flex-row items-center justify-center mx-auto">
         <header class="m-0 md:ml-5 p-5 w-full md:w-1/2">
             <h1 class="text-4xl font-bold mb-4 text-center">Selamat Datang di Kelas 01SIFP010</h1>
