--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -19,7 +19,7 @@ const members = [
     { id: 17, name: 'Muhamad Gilang Ramadan', subdomain: 'gilang', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 19, name: 'Muhammad Shandi Yudha', subdomain: 'shandi', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'zaky', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'gerrard', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
