--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -5,10 +5,10 @@ const members = [
     { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 6, name: 'Diaz Prasojo', subdomain: 'diaz', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 6, name: 'Diaz Prasojo', subdomain: 'diazp', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'farah', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'hilallia', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 10, name: 'Haikal Azhar', subdomain: 'haikal', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 11, name: 'Harsya Pandawa', subdomain: 'epin', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 12, name: 'Hisyam Arief Firmansyah', subdomain: 'hisyam', pdf: 'https://pdf.kelas10sifp.my.id' },
