update anggota sultan

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -25,7 +25,7 @@ const members = [
     { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'princess', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 25, name: 'Rizky Nur Rahman', subdomain: 'kyyiell', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sultan', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sulten', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi', pdf: 'https://pdf.kelas10sifp.my.id' },
 ];
