--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -7,7 +7,7 @@ const members = [
     { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 6, name: 'Diaz Prasojo', subdomain: 'diazp', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://drive.google.com/file/d/134yFm-611SuVgv5zLDXTiki5FZEC2roD/view?usp=drive_link' },
     { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'hilallia', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 10, name: 'Haikal Azhar', subdomain: 'haikal', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 11, name: 'Harsya Pandawa', subdomain: 'epin', pdf: 'https://pdf.kelas10sifp.my.id' },
