--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -3,7 +3,7 @@ const members = [
     { id: 1, name: 'Ahmad Raihan Maulana Setiawan', subdomain: 'aren', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 2, name: 'Andini Azaria Zahra', subdomain: 'andini', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid', pdf: 'https://drive.google.com/file/d/1mfDEtrwxuMVCG2oCgN68fJqydac_uI-c/view?usp=drive_link' },
-    { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://drive.google.com/file/d/1UoWYuaAszWcaJDP5nyJYpGEid_d5Mca6/view?usp=drivesdk' },
     { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 6, name: 'Diaz Prasojo', subdomain: 'diazp', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika', pdf: 'https://pdf.kelas10sifp.my.id' },
