--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -10,14 +10,14 @@ const members = [
     { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://drive.google.com/file/d/134yFm-611SuVgv5zLDXTiki5FZEC2roD/view?usp=drive_link' },
     { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'hilallia', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 10, name: 'Haikal Azhar', subdomain: 'haikal', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 11, name: 'Harsya Pandawa', subdomain: 'epin', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 11, name: 'Harsya Pandawa', subdomain: 'epin', pdf: 'https://drive.google.com/file/d/1U8Zrw_QurxQ6mhT7T-Xn_6O1zZjtOZVT/view?usp=drive_link' },
     { id: 12, name: 'Hisyam Arief Firmansyah', subdomain: 'hisyam', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 13, name: 'Ihwan Ramadani', subdomain: 'ihwan', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 14, name: 'Isma Khoyriyah', subdomain: 'isma', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 14, name: 'Isma Khoyriyah', subdomain: 'isma', pdf: 'https://drive.google.com/file/d/18I38BlomZWSePwZUMe7Z2dQ1Vx_3dXYo/view?usp=sharing' },
     { id: 15, name: 'Liza Zulaikha', subdomain: 'liza', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 16, name: 'Maylova Chayananda', subdomain: 'maylova', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 17, name: 'Muhamad Gilang Ramadan', subdomain: 'gilang', pdf: 'https://drive.google.com/file/d/1FTLEx8FP9Ovk2cdxwPhGDpMoBTUIgE3S/view?usp=drive_link' },
-    { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi', pdf: 'https://drive.google.com/file/d/1ik8gPU4qSN9XAMgzxQIpMmHh3l4Ni7JD/view?usp=drive_link' },
     { id: 19, name: 'Muhammad Shandi Yudha', subdomain: 'shandi', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'gerrard', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan', pdf: 'https://pdf.kelas10sifp.my.id' },
@@ -27,7 +27,7 @@ const members = [
     { id: 25, name: 'Rizky Nur Rahman', subdomain: 'kyyiell', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sulten', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi', pdf: 'https://drive.google.com/file/d/1xPQ5HN1KOzxD5G5MYMxp4hobTiZ_HNz4/view?usp=drivesdk' },
 ];
 ---
 
