update link ara, subdomain liza

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -4,7 +4,7 @@ const members = [
     { id: 2, name: 'Andini Azaria Zahra', subdomain: 'andini', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid', pdf: 'https://drive.google.com/file/d/1mfDEtrwxuMVCG2oCgN68fJqydac_uI-c/view?usp=drive_link' },
     { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://drive.google.com/file/d/1UoWYuaAszWcaJDP5nyJYpGEid_d5Mca6/view?usp=drivesdk' },
-    { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://drive.google.com/file/d/1gSeOAfAO_-ryhZoI7pPJnGKzFM8gJgFd/view?usp=drivesdk' },
     { id: 6, name: 'Diaz Prasojo', subdomain: 'diazp', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://drive.google.com/file/d/134yFm-611SuVgv5zLDXTiki5FZEC2roD/view?usp=drive_link' },
