--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -18,7 +18,7 @@ const members = [
     { id: 16, name: 'Maylova Chayananda', subdomain: 'maylova', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 17, name: 'Muhamad Gilang Ramadan', subdomain: 'gilang', pdf: 'https://drive.google.com/file/d/1FTLEx8FP9Ovk2cdxwPhGDpMoBTUIgE3S/view?usp=drive_link' },
     { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi', pdf: 'https://drive.google.com/file/d/1ik8gPU4qSN9XAMgzxQIpMmHh3l4Ni7JD/view?usp=drive_link' },
-    { id: 19, name: 'Muhammad Shandi Yudha', subdomain: 'shandi', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 19, name: 'Muhammad Shandi Yudha', subdomain: 'shandi', pdf: 'https://drive.google.com/file/d/1sb5DpN1JeuynlJZR_to6Ggv7pbAqg8MK/view?usp=drivesdk' },
     { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'gerrard', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael', pdf: 'https://pdf.kelas10sifp.my.id' },
