update some members link drive

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -19,7 +19,7 @@ const members = [
     { id: 17, name: 'Muhamad Gilang Ramadan', subdomain: 'gilang', pdf: 'https://drive.google.com/file/d/1FTLEx8FP9Ovk2cdxwPhGDpMoBTUIgE3S/view?usp=drive_link' },
     { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi', pdf: 'https://drive.google.com/file/d/1ik8gPU4qSN9XAMgzxQIpMmHh3l4Ni7JD/view?usp=drive_link' },
     { id: 19, name: 'Muhammad Shandi Yudha', subdomain: 'shandi', pdf: 'https://drive.google.com/file/d/1sb5DpN1JeuynlJZR_to6Ggv7pbAqg8MK/view?usp=drivesdk' },
-    { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'gerrard', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'gerrard', pdf: 'https://drive.google.com/file/d/10qf1qGthrTDCtlBpq9rEoq5XNgcqEj4f/view?usp=drive_link/' },
     { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
