update link liza

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -14,7 +14,7 @@ const members = [
     { id: 12, name: 'Hisyam Arief Firmansyah', subdomain: 'hisyam', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 13, name: 'Ihwan Ramadani', subdomain: 'ihwan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 14, name: 'Isma Khoyriyah', subdomain: 'isma', pdf: 'https://drive.google.com/file/d/18I38BlomZWSePwZUMe7Z2dQ1Vx_3dXYo/view?usp=sharing' },
-    { id: 15, name: 'Liza Zulaikha', subdomain: 'zulaikha', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 15, name: 'Liza Zulaikha', subdomain: 'zulaikha', pdf: 'https://drive.google.com/file/d/1M2xw_w2goHK7b4lFE8cWI-o4uco9VX8f/view' },
     { id: 16, name: 'Maylova Chayananda', subdomain: 'maylova', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 17, name: 'Muhamad Gilang Ramadan', subdomain: 'gilang', pdf: 'https://drive.google.com/file/d/1FTLEx8FP9Ovk2cdxwPhGDpMoBTUIgE3S/view?usp=drive_link' },
     { id: 18, name: 'Muhammad Rizqi Rahman', subdomain: 'rizqi', pdf: 'https://drive.google.com/file/d/1ik8gPU4qSN9XAMgzxQIpMmHh3l4Ni7JD/view?usp=drive_link' },
