--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -1,6 +1,6 @@
 ---
 const members = [
-    { id: 1, name: 'Ahmad Raihan Maulana Setiawan', subdomain: 'aren', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 1, name: 'Ahmad Raihan Maulana Setiawan', subdomain: 'aren', pdf: 'https://drive.google.com/file/d/18QaZbU4_zPTLe6EJNWaqvv1g_w1anll1/view?usp=drive_link' },
     { id: 2, name: 'Andini Azaria Zahra', subdomain: 'andini', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid', pdf: 'https://drive.google.com/file/d/1mfDEtrwxuMVCG2oCgN68fJqydac_uI-c/view?usp=drive_link' },
     { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://drive.google.com/file/d/1UoWYuaAszWcaJDP5nyJYpGEid_d5Mca6/view?usp=drivesdk' },
