update link juni

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -23,7 +23,7 @@ const members = [
     { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhan', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'princess', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'princess', pdf: 'https://drive.google.com/file/d/1MqjXLtnjYcI82xA6z2ObOFIBUbrjYBrQ/view?usp=drivesdk' },
     { id: 25, name: 'Rizky Nur Rahman', subdomain: 'kyyiell', pdf: 'https://drive.google.com/file/d/1duti5CzU6tNDxZ0RHAM64vAL7TZKm5RQ/view?usp=drive_link' },
     { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sulten', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://pdf.kelas10sifp.my.id' },
