update link diaz sultan

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -5,7 +5,7 @@ const members = [
     { id: 3, name: 'Arrosyid Al Ayubi', subdomain: 'arrosyid', pdf: 'https://drive.google.com/file/d/1mfDEtrwxuMVCG2oCgN68fJqydac_uI-c/view?usp=drive_link' },
     { id: 4, name: 'Arum Kusuma Dewi', subdomain: 'arum', pdf: 'https://drive.google.com/file/d/1UoWYuaAszWcaJDP5nyJYpGEid_d5Mca6/view?usp=drivesdk' },
     { id: 5, name: 'Azzura Agustina', subdomain: 'azzura', pdf: 'https://drive.google.com/file/d/1gSeOAfAO_-ryhZoI7pPJnGKzFM8gJgFd/view?usp=drivesdk' },
-    { id: 6, name: 'Diaz Prasojo', subdomain: 'diazp', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 6, name: 'Diaz Prasojo', subdomain: 'diazp', pdf: 'https://drive.google.com/file/d/1pson6IRJxAQMmMhANi87L4Zi90SJHKsQ/view?usp=drivesdk' },
     { id: 7, name: 'Diaz Shandika Firdaus', subdomain: 'dika', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 8, name: 'Gladys Aditya Ramadhan', subdomain: 'gladys', pdf: 'https://drive.google.com/file/d/134yFm-611SuVgv5zLDXTiki5FZEC2roD/view?usp=drive_link' },
     { id: 9, name: 'Farah Hilallia Alvina', subdomain: 'hilallia', pdf: 'https://drive.google.com/file/d/1eTJgFsvYMqACrll7Fh7zFyc-_PX3NnGj/view?usp=drivesdk' },
@@ -25,7 +25,7 @@ const members = [
     { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'princess', pdf: 'https://drive.google.com/file/d/1MqjXLtnjYcI82xA6z2ObOFIBUbrjYBrQ/view?usp=drivesdk' },
     { id: 25, name: 'Rizky Nur Rahman', subdomain: 'kyyiell', pdf: 'https://drive.google.com/file/d/1duti5CzU6tNDxZ0RHAM64vAL7TZKm5RQ/view?usp=drive_link' },
-    { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sulten', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sulten', pdf: 'https://drive.google.com/file/d/16VNV5svPHNTzSIC7dqE9_4a42wltI6gi/view?usp=drivesdk' },
     { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi', pdf: 'https://drive.google.com/file/d/1xPQ5HN1KOzxD5G5MYMxp4hobTiZ_HNz4/view?usp=drivesdk' },
 ];
