--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -22,7 +22,7 @@ const members = [
     { id: 20, name: 'Muhammad Zaky Permana', subdomain: 'gerrard', pdf: 'https://drive.google.com/file/d/10qf1qGthrTDCtlBpq9rEoq5XNgcqEj4f/view?usp=drive_link/' },
     { id: 21, name: 'Rayhan Priyonggo', subdomain: 'rayhanpriy', pdf: 'https://pdf.kelas10sifp.my.id' },
     { id: 22, name: 'Refael Gomgom Sibarani', subdomain: 'refael', pdf: 'https://pdf.kelas10sifp.my.id' },
-    { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 23, name: 'Rifky Chaezario Hidayat', subdomain: 'rifky', pdf: 'https://drive.google.com/file/d/1llBa-_4MuQmQ78wKHwSsjQaJtJvVNMK8/view?usp=drive_link' },
     { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'princess', pdf: 'https://drive.google.com/file/d/1MqjXLtnjYcI82xA6z2ObOFIBUbrjYBrQ/view?usp=drivesdk' },
     { id: 25, name: 'Rizky Nur Rahman', subdomain: 'kyyiell', pdf: 'https://drive.google.com/file/d/1duti5CzU6tNDxZ0RHAM64vAL7TZKm5RQ/view?usp=drive_link' },
     { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sulten', pdf: 'https://drive.google.com/file/d/16VNV5svPHNTzSIC7dqE9_4a42wltI6gi/view?usp=drivesdk' },
