update link surya

--- a/src/components/Anggota.astro
+++ b/src/components/Anggota.astro
@@ -26,7 +26,7 @@ const members = [
     { id: 24, name: 'Rizka Nur Juniarti', subdomain: 'princess', pdf: 'https://drive.google.com/file/d/1MqjXLtnjYcI82xA6z2ObOFIBUbrjYBrQ/view?usp=drivesdk' },
     { id: 25, name: 'Rizky Nur Rahman', subdomain: 'kyyiell', pdf: 'https://drive.google.com/file/d/1duti5CzU6tNDxZ0RHAM64vAL7TZKm5RQ/view?usp=drive_link' },
     { id: 26, name: 'Sultan Muhammad Syafiq', subdomain: 'sulten', pdf: 'https://drive.google.com/file/d/16VNV5svPHNTzSIC7dqE9_4a42wltI6gi/view?usp=drivesdk' },
-    { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://pdf.kelas10sifp.my.id' },
+    { id: 27, name: 'Surya Aji Prasetya', subdomain: 'surya', pdf: 'https://drive.google.com/file/d/1t0ufzR_kFd19m0byLxgTSy5FiMnPvpdB/view?usp=drive_link' },
     { id: 28, name: 'Zaqi Alfataillah', subdomain: 'zaqi', pdf: 'https://drive.google.com/file/d/1xPQ5HN1KOzxD5G5MYMxp4hobTiZ_HNz4/view?usp=drivesdk' },
 ];
 ---
